--- a/frontend/src/pages/contact-us.html
+++ b/frontend/src/pages/contact-us.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - SecureVoice</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <link rel="stylesheet" href="assets/css//base.css">
-    <link rel="stylesheet" href="assets/css/components/enhanced-header.css">
-    <link rel="stylesheet" href="assets/css/components/footer.css">
-    <link rel="stylesheet" href="assets/css/style/contact-us-style.css">
-    <link rel="stylesheet" href="assets/css/responsive/contact-us-responsive.css">
-    <link rel="stylesheet" href="assets/css/conponents/auth-header.css">
+    <link rel="icon" type="image/x-icon" href="frontend/images/favicon.ico">
+    <link rel="stylesheet" href="frontend/css//base.css">
+    <link rel="stylesheet" href="frontend/css/nhanced-header.css">
+    <link rel="stylesheet" href="frontend/css/footer.css">
+    <link rel="stylesheet" href="frontend/css/pages/contact-us-style.css">
+    <link rel="stylesheet" href="frontend/css/responsive/contact-us-responsive.css">
+    <link rel="stylesheet" href="frontend/css/auth-header.css">
 </head>
 <body>
 
@@ -149,7 +149,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-logo">
-                    <img src="assets/images/secureVOICE-logo.png" alt="secureVOICE-logo" class="floating-logo">
+                    <img src="frontend/images/secureVOICE-logo.png" alt="secureVOICE-logo" class="floating-logo">
                     <p class="footer-title">SECURE VOICE</p>
                 </div>
                 <div class="footer-links">
@@ -221,9 +221,9 @@
 </footer>
 <!-- End: Footer --> 
 
-    <script src="assets/js/contact-us.js"></script>
-    <script src="assets/js/base/header.js"></script>
-    <script src="assets/js/auth-handler.js" defer></script>
+    <script src="frontend/js/contact-us.js"></script>
+    <script src="frontend/js/base/header.js"></script>
+    <script src="frontend/js/auth-handler.js" defer></script>
 
     <!-- Add scroll effect for header -->
     <script>
