Add username field to registration process with validation and error handling

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -293,6 +293,15 @@
                         <p class="verified-text">Face Verified</p>
                     </div>
                     <div class="input-group">
+                        <label for="username">Username</label>
+                        <div class="input-wrapper">
+                            <i class="fas fa-user"></i>
+                            <input type="text" id="username" placeholder="Choose a unique username" maxlength="50">
+                        </div>
+                        <span class="helper-text">Username must be 3-50 characters (letters, numbers, underscores only)</span>
+                        <span class="error-message" id="username-error"></span>
+                    </div>
+                    <div class="input-group">
                         <label for="email">Email</label>
                         <div class="input-wrapper">
                             <i class="fas fa-envelope"></i>
