feat: Add chat functionality and EJS view engine support
- Integrated EJS as the view engine for rendering dynamic HTML pages.
- Updated the user profile route to serve a static HTML page instead of rendering data directly.
- Implemented a chat system for users to communicate with admins regarding complaints.
- Added CSS styles for the chat modal and messages.
- Enhanced the profile page with new chat buttons and functionality.
- Modified database schema to support multi-step registration and admin approval workflows.
- Removed deprecated test API script.

--- a/frontend/src/pages/profile.html
+++ b/frontend/src/pages/profile.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureVoice | User Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
-    <link rel="stylesheet" href="../css/userDashboard.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/src/css/userDashboard.css">
 </head>
 <body>
     <div class="container">
@@ -14,12 +14,12 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="../../images/auth/secureVOICE.png" alt="SecureVoice" class="logo-img">
+                    <img src="/images/auth/secureVOICE.png" alt="SecureVoice" class="logo-img">
                 </div>
             </div>
 
             <div class="profile">
-                <img id="user-avatar" src="../../public/images/icons/default-avatar.png" alt="User Avatar" class="avatar">
+                <img id="user-avatar" src="/public/images/icons/default-avatar.png" alt="User Avatar" class="avatar">
                 <h2 id="user-fullname">Loading...</h2>
                 <p class="email" id="user-email">loading@email.com</p>
                 <div class="verification-badges">
@@ -161,7 +161,7 @@
                 <div class="card profile-card">
                     <div class="profile-header">
                         <div class="profile-avatar-section">
-                            <img id="profile-avatar" src="../../public/images/icons/default-avatar.png" alt="Profile" class="avatar-large">
+                            <img id="profile-avatar" src="/public/images/icons/default-avatar.png" alt="Profile" class="avatar-large">
                             <div class="profile-badges">
                                 <span class="badge verified" id="profile-nid-badge" style="display: none;">
                                     <i class="fas fa-check-circle"></i> NID Verified
@@ -486,6 +486,6 @@
         </div>
     </div>
 
-    <script src="../js/profile.js"></script>
+    <script src="/src/js/profile.js"></script>
 </body>
 </html>
